--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -3,7 +3,7 @@ The avatar should be centered vertically and horizontally (Hint: the justify-con
 The name should be centered below the avatar
 The background-color should be a different colour than the nav and the body */
 
-header {
+#primary-header {
   display: flex;
   padding-top: 160px;
   height: 520px;
