--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -12,11 +12,10 @@
       </section> */
 
   form {
-    display: flex;
+      /* change display on clic */
+    display: none;
     flex-direction: column;
     font-weight: bold;
-
-
   }
 
   textarea {
@@ -25,7 +24,7 @@
     border-bottom: 3px solid #545149;
   }
 
-  button {
+  #submit-button {
     color: #FFFFFF;
     background-color: #4056A1;
 
@@ -44,3 +43,13 @@
   .counter {
     align-self: center;
   }
+
+  #error-popup{
+    display: none;
+    border: 3px solid #ad1515;
+    color: #ad1515;
+    margin-bottom: 10px;
+
+  }
+
+
