--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,30 +1,31 @@
-/* 120 pixels in height
-Full width of the viewport
---#4056A1 as its default background colour
---#FFFFFF as its default font colour
-<span> within the <nav> uses Bungee as its default font-family
-1.5ems of space on the right and left between the content and the edges
- */
+
+
+ /* @media all and (max-width: 600px){
+  .somthing {
+    width
+  }
+ } */
 
 nav {
   display: flex;
   position: fixed;
-  min-height: 120px;
+  min-height: 5rem;
   width: 100%;
   color: #FFFFFF;
   background-color: transparent;
   justify-content: space-between;
   padding-left: 1.5em;
   padding-right: 1.5em;
-  padding-bottom: 10px;
-
+  padding-bottom: 0.5em;
+  pointer-events: none;
  }
 
 .logo {
   display: flex;
   font-family: Bungee, sans-serif;
   font-size: 24px;
-  align-items: flex-end;
+  align-items: flex-start;
+  padding-top: 1rem;
  }
 
 #new-tweet-button {
@@ -34,12 +35,9 @@ nav {
   background-color: transparent;
   color: #FFFFFF;
   flex-direction: column;
-
   justify-content: center;
-  /* margin-top: 15px; */
-  /* justify-content: space-around; */
   border: none;
-
+  pointer-events: auto;
  }
 
  #down-arrows {
@@ -63,7 +61,6 @@ nav {
  .new-tweet i {
   text-align: center;
   color: red;
-
  }
 
  .bold {
