--- a/public/styles/tweet-container.css
+++ b/public/styles/tweet-container.css
@@ -1,18 +1,3 @@
-/*
-      <article>
-      <header>
-        <h2>
-          <span>icon </span>
-          <span>name </span>
-          <span>account </span>
-        </h2>
-      </header>
-      <div class="content">
-        stuffstuffstuff
-      </div>
-      <footer>date icons</footer>
-    </article> */
-
 
 #tweets-container article {
   display: flex;
@@ -20,29 +5,17 @@
   align-items: center;
   background-color: #f4f1ec;
   border: 3px solid #545149;
-
-
+  border-radius: 15px;
+  margin-bottom: 1rem;
+  margin-top: 0.5rem;
 }
-
-article {
-  /* padding-bottom: 0.5rem; */
-  margin-bottom: 0.5rem;
-
-}
-
 
 article header {
   display: flex;
   padding: 1rem;
-
   width: 100%;
   font-size: 20px;
   justify-content: space-between;
-
-}
-
-#account {
-  color: lightgrey;
 }
 
 article footer {
@@ -54,24 +27,37 @@ article footer {
   border-top: 3px solid #545149;
 }
 
+.account {
+  color: lightgrey;
+}
+
 .content {
   font-weight: bold;
   font-size: 12px;
   width: 95%;
   padding-top: 1rem;
   padding-bottom: 1rem;
-
-
+  overflow: visible;
+  overflow-wrap: break-word;
 }
 
-#tweets-container article:hover {
+.icons {
+  color: #4056A1;
+  list-style: none;
+}
+
+li {
+  display: inline-block;
+}
+
+.tweet-container article:hover {
   box-shadow: 10px 5px 5px lightgrey;;
 }
 
-#icons {
-  color: #4056A1;
+article footer [class^="fa-"]:hover  {
+  color:darkgoldenrod
 }
 
-footer [class^="fa-"]:hover  {
-  color:darkgoldenrod
+.clicked {
+  color: gold;
 }
